added font awesome module

--- a/src/app/coin-data/overall-table/overall-table.component.html
+++ b/src/app/coin-data/overall-table/overall-table.component.html
@@ -20,7 +20,7 @@
             }}&nbsp;<span class="light-gray">{{ currencyTicker.symbol }}</span>
           </td>
           <td>NT${{ currencyTicker.price | priceFormat }}</td>
-          <td>@mdo</td>
+          <td><fa-icon [icon]="faCaretUp"></fa-icon></td>
           <td>Larry</td>
           <td>the Bird</td>
           <td>@twitter</td>
