--- a/src/app/coin-data/overall-table/overall-table.component.html
+++ b/src/app/coin-data/overall-table/overall-table.component.html
@@ -5,22 +5,22 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">名稱</th>
-          <th scope="col">價格</th>
-          <th scope="col">24h%</th>
-          <th scope="col">7d%</th>
+          <th scope="col" class="text-right">價格</th>
+          <th scope="col" class="text-right">24h%</th>
+          <th scope="col" class="text-right">7d%</th>
           <th scope="col">市值</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let currencyTicker of currencyTickers; index as i">
           <th scope="row">{{ i + 1 }}</th>
-          <td>
+          <td class="text-nowrap">
             <img class="coin-logo mr-1" [src]="currencyTicker.logo_url" />{{
               currencyTicker.name
             }}&nbsp;<span class="light-gray">{{ currencyTicker.symbol }}</span>
           </td>
-          <td>NT${{ currencyTicker.price | numberFormat }}</td>
-          <td>
+          <td class="text-right">NT${{ currencyTicker.price | numberFormat }}</td>
+          <td class="text-nowrap">
             <fa-icon
               class="price-up mr-1"
               *ngIf="
@@ -44,12 +44,31 @@
               }}%</span
             >
           </td>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
+          <td class="text-nowrap">
+            <fa-icon
+              class="price-up mr-1"
+              *ngIf="
+                (currencyTicker['7d'].price_change_pct | stringToNumber: 'float') > 0;
+                else arrowDown
+              "
+              [icon]="faCaretUp"
+            ></fa-icon>
+            <ng-template #arrowDown>
+              <fa-icon class="price-down mr-1" [icon]="faCaretDown"></fa-icon>
+            </ng-template>
+            <span
+              [class]="
+                (currencyTicker['7d'].price_change_pct | stringToNumber: 'float') > 0
+                  ? 'price-up'
+                  : 'price-down'
+              "
+              >{{
+                (currencyTicker['7d'].price_change_pct | stringToNumber: 'float') * 100
+                  | numberFormat
+              }}%</span
+            >
+          </td>
+          <td>NT${{ currencyTicker.market_cap | numberFormat }}</td>
         </tr>
       </tbody>
     </table>
