--- a/src/app/coin-data/overall-table/overall-table.component.css
+++ b/src/app/coin-data/overall-table/overall-table.component.css
@@ -1,17 +1,33 @@
-.coin-logo{
+.coin-logo {
   height: 24px;
   width: 24px;
   border-radius: 12px;
 }
 
-.light-gray{
+.light-gray {
   color: #808080f2;
 }
 
-.price-up{
-  color: #16c784
+.price-up {
+  color: #16c784;
 }
 
-.price-down{
-  color: #ea3943
+.price-down {
+  color: #ea3943;
+}
+
+table {
+  position: relative;
+}
+
+.stick-left {
+  position: sticky;
+  left: 0;
+  background-color: #fff;
+  z-index: 50;
+}
+
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
+  background-color: #e6f0ff;
 }
