--- a/src/app/coin-data/overall-table/overall-table.component.html
+++ b/src/app/coin-data/overall-table/overall-table.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="table-responsive-md">
-    <table class="table table-striped table-hover">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">名稱</th>
+          <th scope="col" class="stick-left">名稱</th>
           <th scope="col" class="text-right">價格</th>
           <th scope="col" class="text-right">24h%</th>
           <th scope="col" class="text-right">7d%</th>
@@ -14,7 +14,7 @@
       <tbody>
         <tr *ngFor="let currencyTicker of currencyTickers; index as i">
           <th scope="row">{{ i + 1 }}</th>
-          <td class="text-nowrap">
+          <td class="text-nowrap stick-left">
             <img class="coin-logo mr-1" [src]="currencyTicker.logo_url" />{{
               currencyTicker.name
             }}&nbsp;<span class="light-gray">{{ currencyTicker.symbol }}</span>
