--- a/src/app/coin-data/overall-table/overall-table.component.html
+++ b/src/app/coin-data/overall-table/overall-table.component.html
@@ -76,21 +76,29 @@
 
   <nav aria-label="Page navigation example" class="d-flex justify-content-center">
     <ul class="pagination">
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
+      <li class="page-item" *ngIf="currentPage !== 1">
+        <a class="page-link pointer" (click)="getData(1)">first</a>
+      </li>
+      <li class="page-item" [class.disabled]="currentPage === 1">
+        <a class="page-link" (click)="getData(currentPage - 1)" aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
           <span class="sr-only">Previous</span>
         </a>
       </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li
+        *ngFor="let item of [].constructor(5); index as i"
+        class="page-item"
+        [class.active]="currentPage + i === currentPage"
+      >
+        <a class="page-link pointer" (click)="getData(currentPage + i)">{{ currentPage + i }}</a>
+      </li>
       <li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
+        <a class="page-link pointer" (click)="getData(currentPage + 1)" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
           <span class="sr-only">Next</span>
         </a>
       </li>
+      <li class="page-item" *ngIf="currentPage !== getLastPage()"><a class="page-link pointer" (click)="getData(getLastPage())">last</a></li>
     </ul>
   </nav>
 </div>
