--- a/src/app/coin-data/overall-table/overall-table.component.html
+++ b/src/app/coin-data/overall-table/overall-table.component.html
@@ -75,33 +75,9 @@
     </table>
   </div>
 
-  <nav aria-label="Page navigation example" class="d-flex justify-content-center">
-    <ul class="pagination">
-      <li class="page-item" *ngIf="currentPage !== 1">
-        <a class="page-link pointer" (click)="getData(1)">first</a>
-      </li>
-      <li class="page-item" [class.disabled]="currentPage === 1">
-        <a class="page-link" (click)="getData(currentPage - 1)" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
-        </a>
-      </li>
-      <li
-        *ngFor="let item of getPagination(); index as i"
-        class="page-item"
-        [class.active]="currentPage === item"
-      >
-        <a class="page-link pointer" (click)="getData(item)">{{ item }}</a>
-      </li>
-      <li class="page-item" [class.disabled]="currentPage === totalPages">
-        <a class="page-link pointer" (click)="getData(currentPage + 1)" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
-        </a>
-      </li>
-      <li class="page-item" *ngIf="currentPage !== totalPages">
-        <a class="page-link pointer" (click)="getData(totalPages)">last</a>
-      </li>
-    </ul>
-  </nav>
+  <app-pagination
+    [totalPages]="totalPages"
+    [pageSlideSize]="pageSlideSize"
+    (pageEvent)="getData($event)"
+  ></app-pagination>
 </div>
