--- a/src/app/coin-data/price-history-chart/price-history-chart.component.html
+++ b/src/app/coin-data/price-history-chart/price-history-chart.component.html
@@ -1,5 +1,5 @@
 <highcharts-chart
-  [Highcharts]="Highcharts"
+  [Highcharts]="highcharts"
   [options]="chartOptions"
   [(update)]="updateFlag"
   style="width: 100%; height: 400px; display: block"
