implement description-block.component

--- a/src/app/coin-data/coin-detail/coin-detail.component.html
+++ b/src/app/coin-data/coin-detail/coin-detail.component.html
@@ -1,2 +1,5 @@
-<app-description-block></app-description-block>
+<div class="row">
+  <div class="col-md-6"><app-description-block></app-description-block></div>
+</div>
+
 <app-price-history-chart></app-price-history-chart>
