--- a/src/app/coin-data/coin-detail/coin-detail.component.html
+++ b/src/app/coin-data/coin-detail/coin-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6"><app-description-block></app-description-block></div>
+  <div class="col-md-6"><app-price-change></app-price-change></div>
 </div>
 
 <app-price-history-chart></app-price-history-chart>
