--- a/src/app/coin-data/coin-detail/coin-detail.component.html
+++ b/src/app/coin-data/coin-detail/coin-detail.component.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-6"><app-price-change></app-price-change></div>
+  <div class="col-md-6"><app-recent-trades></app-recent-trades></div>
 </div>
 
 <app-price-history-chart></app-price-history-chart>
