minor error fix

--- a/src/app/coin-data/market-cap/market-cap.component.html
+++ b/src/app/coin-data/market-cap/market-cap.component.html
@@ -1,8 +1,8 @@
-<span class="title ml-2">幣安成交紀錄</span>
+<span class="title ml-2">市值資訊</span>
 <table class="table">
   <tbody>
     <tr>
-      <th scope="row">1</th>
+      <th scope="row">排名</th>
       <td class="text-right">Mark</td>
     </tr>
     <tr>
