--- a/src/app/coin-data/coin-detail/coin-detail.component.html
+++ b/src/app/coin-data/coin-detail/coin-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-6"><app-price-change></app-price-change></div>
-  <div class="col-md-6"><app-market-cap></app-market-cap></div>
+  <div class="col-md-6"><app-price-change [coinTicker]="coinTicker"></app-price-change></div>
+  <div class="col-md-6"><app-market-cap [coinTicker]="coinTicker"></app-market-cap></div>
 </div>
 
 <app-price-history-chart></app-price-history-chart>
