--- a/src/app/coin-data/market-cap/market-cap.component.html
+++ b/src/app/coin-data/market-cap/market-cap.component.html
@@ -3,19 +3,19 @@
   <tbody>
     <tr>
       <th scope="row">市值排名</th>
-      <td class="text-right">{{currencyTickersResp.rank}}</td>
+      <td class="text-right">{{ coinTicker.rank }}</td>
     </tr>
     <tr>
       <th scope="row">市值</th>
-      <td class="text-right">NT${{ currencyTickersResp.market_cap | numberFormat }}</td>
+      <td class="text-right">NT${{ coinTicker.market_cap | numberFormat }}</td>
     </tr>
     <tr>
       <th scope="row">最大供給量</th>
-      <td class="text-right">{{ currencyTickersResp.max_supply | numberFormat }}</td>
+      <td class="text-right">{{ coinTicker.max_supply | numberFormat }}</td>
     </tr>
     <tr>
       <th scope="row">現貨流通量</th>
-      <td class="text-right">{{ currencyTickersResp.circulating_supply | numberFormat }}</td>
+      <td class="text-right">{{ coinTicker.circulating_supply | numberFormat }}</td>
     </tr>
   </tbody>
 </table>
