implement description inside description-block.component, add read more/less style to it

--- a/src/app/coin-data/coin-detail/coin-detail.component.html
+++ b/src/app/coin-data/coin-detail/coin-detail.component.html
@@ -1,8 +1,10 @@
-<div class="row">
-  <div class="col-md-6"><app-price-change [coinTicker]="coinTicker"></app-price-change></div>
-  <div class="col-md-6"><app-market-cap [coinTicker]="coinTicker"></app-market-cap></div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6"><app-price-change [coinTicker]="coinTicker"></app-price-change></div>
+    <div class="col-md-6"><app-market-cap [coinTicker]="coinTicker"></app-market-cap></div>
+  </div>
+
+  <app-price-history-chart></app-price-history-chart>
+
+  <app-description-block [symbol]="symbol"></app-description-block>
 </div>
-
-<app-price-history-chart></app-price-history-chart>
-
-<app-description-block [symbol]="symbol"></app-description-block>
