--- a/src/app/coin-data/description-block/description-block.component.html
+++ b/src/app/coin-data/description-block/description-block.component.html
@@ -1,9 +1,55 @@
 <div class="card">
-  <h5 class="card-header">About {{coinMetaData?.name}}</h5>
+  <h5 class="card-header">About {{ coinMetaData?.name }}</h5>
   <div class="card-body module">
     <!-- <h5 class="card-title">Special title treatment</h5> -->
-    <p class="card-text collapse" id="description-collapse" aria-expanded="false">{{coinMetaData?.description}}</p>
-    <a role="button" class="collapsed" data-toggle="collapse" href="#description-collapse"
-    aria-expanded="false" aria-controls="description-collapse"></a>
+    <p class="card-text collapse" id="description-collapse" aria-expanded="false">{{ coinMetaData?.description }}</p>
+    <a
+      role="button"
+      class="collapsed"
+      data-toggle="collapse"
+      href="#description-collapse"
+      aria-expanded="false"
+      aria-controls="description-collapse"
+    ></a>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <table class="table mb-0">
+        <tbody>
+          <tr>
+            <th scope="row">Currency Name</th>
+            <td class="text-right">{{ coinMetaData?.name }}</td>
+          </tr>
+          <tr>
+            <th scope="row">Website</th>
+            <td class="text-right">
+              <a [href]="coinMetaData?.website_url">{{ coinMetaData?.website_url }}</a>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td class="text-right">Larry</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-6">
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">Website</th>
+            <td class="text-right">Mark</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td class="text-right">Jacob</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td class="text-right">Larry</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
