Connect correct data to table

--- a/src/app/coin-data/description-block/description-block.component.html
+++ b/src/app/coin-data/description-block/description-block.component.html
@@ -23,12 +23,14 @@
           <tr>
             <th scope="row">Website</th>
             <td class="text-right">
-              <a [href]="coinMetaData?.website_url">{{ coinMetaData?.website_url }}</a>
+              <a target="blank" [href]="coinMetaData?.website_url">{{ coinMetaData?.website_url }}</a>
             </td>
           </tr>
           <tr>
-            <th scope="row">3</th>
-            <td class="text-right">Larry</td>
+            <th scope="row">Whitepaper</th>
+            <td class="text-right">
+              <a target="blank" [href]="coinMetaData?.whitepaper_url">{{ coinMetaData?.whitepaper_url }}</a>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -37,16 +39,22 @@
       <table class="table">
         <tbody>
           <tr>
-            <th scope="row">Website</th>
-            <td class="text-right">Mark</td>
+            <th scope="row">Github</th>
+            <td class="text-right">
+              <a target="blank" [href]="coinMetaData?.github_url">{{ coinMetaData?.github_url }}</a>
+            </td>
           </tr>
           <tr>
-            <th scope="row">2</th>
-            <td class="text-right">Jacob</td>
+            <th scope="row">Twitter</th>
+            <td class="text-right">
+              <a target="blank" [href]="coinMetaData?.twitter_url">{{ coinMetaData?.twitter_url }}</a>
+            </td>
           </tr>
           <tr>
-            <th scope="row">3</th>
-            <td class="text-right">Larry</td>
+            <th scope="row">Reddit</th>
+            <td class="text-right">
+              <a target="blank" [href]="coinMetaData?.reddit_url">{{ coinMetaData?.reddit_url }}</a>
+            </td>
           </tr>
         </tbody>
       </table>
