1. coin-detail.component get symbol from router 2. fix max_supply data not given problem 3. price-history-chart.component get symbol from parent component

--- a/src/app/coin-data/coin-detail/coin-detail.component.html
+++ b/src/app/coin-data/coin-detail/coin-detail.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-6"><app-market-cap [coinTicker]="coinTicker"></app-market-cap></div>
   </div>
 
-  <app-price-history-chart></app-price-history-chart>
+  <app-price-history-chart [symbol]="symbol"></app-price-history-chart>
 
   <app-description-block [symbol]="symbol"></app-description-block>
 </div>
