--- a/src/app/outer-template/header/header.component.html
+++ b/src/app/outer-template/header/header.component.html
@@ -25,8 +25,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/coin-detail"
-            >貨幣資訊<span class="sr-only">(current)</span></a
+          <a class="nav-link" routerLink="/"
+            >Assets<span class="sr-only">(current)</span></a
           >
         </li>
         <li class="nav-item">
