--- a/src/app/coin-data/price-history-chart/price-history-chart.component.html
+++ b/src/app/coin-data/price-history-chart/price-history-chart.component.html
@@ -2,5 +2,6 @@
   [Highcharts]="highcharts"
   [options]="chartOptions"
   [(update)]="updateFlag"
+  [callbackFunction]="chartCallback"
   style="width: 100%; height: 400px; display: block"
 ></highcharts-chart>
