--- a/src/app/coin-data/overall-table/overall-table.component.html
+++ b/src/app/coin-data/overall-table/overall-table.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="table-responsive-md">
+  <div class="table-responsive-lg">
     <table class="table table-hover">
       <thead>
         <tr>
