--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<app-price-marquee></app-price-marquee>
+<app-news-marquee></app-news-marquee>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
