--- a/src/app/news/news-marquee/news-marquee.component.css
+++ b/src/app/news/news-marquee/news-marquee.component.css
@@ -1,22 +1,36 @@
-body {
-  background: #eee
-}
-
-.news {
-  width: 160px
-}
-
-.news-scroll a {
+a {
   text-decoration: none
 }
 
-.dot {
-  height: 6px;
-  width: 6px;
-  margin-left: 3px;
-  margin-right: 3px;
-  margin-top: 2px !important;
-  background-color: rgb(207, 23, 23);
-  border-radius: 50%;
-  display: inline-block
+body {
+  height: 100vh;
+  background: #3e3232;
+  font-family: 'Poppins', sans-sherif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  overflow: hidden
+}
+
+.ticker {
+  display: flex;
+  flex-wrap: wrap;
+  height: 50px;
+  margin: 0 auto
+}
+
+.news {
+  padding: 0 2%
+}
+
+
+.news marquee {
+  font-size: 18px;
+  margin-top: 12px
+}
+
+.news-content a {
+  margin-right: 41px;
+  display: inline
 }
