--- a/src/app/outer-template/header/header.component.html
+++ b/src/app/outer-template/header/header.component.html
@@ -1,15 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <span class="navbar-brand mb-0 h1">
-      <img
-        src="assets/images/crypto.svg"
-        width="30"
-        height="30"
-        class="d-inline-block align-top"
-        alt=""
-      />
+    <a class="navbar-brand mb-0 h1" [routerLink]="['/']">
+      <img src="assets/images/crypto.svg" width="30" height="30" class="d-inline-block align-top" alt="" />
       Crypto Info
-    </span>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -25,9 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/"
-            >Assets<span class="sr-only">(current)</span></a
-          >
+          <a class="nav-link" routerLink="/">Assets<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#">幣市新聞</a>
@@ -58,15 +50,8 @@
       </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input
-          class="form-control mr-sm-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-          Search
-        </button>
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
   </div>
