--- a/src/app/outer-template/header/header.component.html
+++ b/src/app/outer-template/header/header.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link" routerLink="/">Assets<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">幣市新聞</a>
+          <a class="nav-link" routerLink="news">幣市新聞</a>
         </li>
         <!-- <li class="nav-item dropdown">
         <a
