--- a/src/app/news/news-carousel/news-carousel.component.html
+++ b/src/app/news/news-carousel/news-carousel.component.html
@@ -11,7 +11,11 @@
     <div class="carousel-inner" *ngIf="news">
       <ng-container *ngFor="let data of news; index as i">
         <div class="carousel-item" [class.active]="i === 0">
-          <a [href]="data.url"><img class="d-block w-100" [src]="data.image" [alt]="i + 'slide'" /></a>
+          <a [href]="data.url" target="blank"><img class="d-block w-100" [src]="data.image" [alt]="i + 'slide'" />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>{{data.title}}</h5>
+              <!-- <p>{{data.title}}</p> -->
+            </div></a>
         </div>
       </ng-container>
     </div>
