--- a/src/app/news/news/news.component.html
+++ b/src/app/news/news/news.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-8"><app-news-carousel></app-news-carousel></div>
+    <div class="col-12 col-md-4"><app-news-list></app-news-list></div>
   </div>
 </div>
