implement search coin on header

--- a/src/app/outer-template/header/header.component.html
+++ b/src/app/outer-template/header/header.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link" routerLink="/">Assets<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="news">幣市新聞</a>
+          <a class="nav-link" routerLink="news">News</a>
         </li>
         <!-- <li class="nav-item dropdown">
         <a
@@ -49,10 +49,11 @@
         >
       </li> -->
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <div class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" (input)="ticker.value=$any($event.target).value.toUpperCase()" type="search" placeholder="enter crypto ticker" #ticker aria-label="Search" />
+        <button class="btn btn-outline-success my-2 my-sm-0" (click)="searchCoin(ticker.value)">Search</button>
+      </div>
     </div>
   </div>
 </nav>
+<app-loading *ngIf="loading"></app-loading>
